@@ -1,3 +1,7 @@
+2014-01-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* fixwrites.c: Recognize dumpname as string.
+
 2014-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Introduce a genuine 64-bit integer type, in case of 32-bit off_t.
